# leadform-5mon9u

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  release.yml  security.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: README.md
infrastructure/docker/monitoring/prometheus/: prometheus.yml
infrastructure/kubernetes/base/: namespaces.yaml  storage-classes.yaml
infrastructure/kubernetes/databases/: mongodb.yaml  postgresql.yaml  redis.yaml
infrastructure/kubernetes/ingress/: cert-manager.yaml  nginx-ingress.yaml
infrastructure/kubernetes/logging/: elasticsearch.yaml  fluentd.yaml  kibana.yaml
infrastructure/kubernetes/monitoring/: grafana.yaml  jaeger.yaml  prometheus.yaml
infrastructure/kubernetes/secrets/: app-secrets.yaml  aws-secrets.yaml
infrastructure/kubernetes/services/: ai-service.yaml  analytics-service.yaml  form-service.yaml  gateway-service.yaml  sms-service.yaml
infrastructure/scripts/: aws-setup.sh  k8s-setup.sh  monitoring-setup.sh
infrastructure/terraform/aws/: backend.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/aws/ecr/: main.tf
infrastructure/terraform/aws/eks/: main.tf
infrastructure/terraform/aws/rds/: main.tf
infrastructure/terraform/aws/vpc/: main.tf
src/backend/: .dockerignore  .env.example  .eslintrc.js  README.md  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/migrations/mongo/: 001_indexes.js  002_message_schema.js
src/backend/migrations/postgres/: 001_initial_schema.sql  002_form_tables.sql  003_conversation_tables.sql
src/backend/openapi/: ai-service.yaml  analytics-service.yaml  form-service.yaml  sms-service.yaml
src/backend/proto/: ai.proto  analytics.proto  form.proto  sms.proto
src/backend/scripts/: build.sh  migration.sh  setup.sh  test.sh
src/backend/services/ai/: Dockerfile  pyproject.toml
src/backend/services/ai/src/: config.py  main.py
src/backend/services/ai/src/api/: router.py
src/backend/services/ai/src/api/endpoints/: conversation.py  intent.py
src/backend/services/ai/src/models/: conversation.py  intent.py
src/backend/services/ai/src/services/: context_service.py  llm_service.py
src/backend/services/ai/tests/: test_conversation.py  test_intent.py
src/backend/services/analytics/: Dockerfile  package.json
src/backend/services/form/: Dockerfile  (+1 more)
src/web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  README.md  cypress.config.ts  jest.config.ts  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
src/web/widget/: FormWidget.tsx  README.md  package.json  styles.css  tsconfig.json  types.ts  validation.ts  vite.config.ts
(+166 files in other folders)
